--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pankod/refine-antd": "^3.18.0",
     "@pankod/refine-core": "^3.18.0",
+    "@pankod/refine-graphql": "^3.18.0",
+    "@pankod/refine-kbar": "^0.8.0",
+    "@pankod/refine-react-location": "^3.18.0",
+    "@pankod/refine-strapi-graphql": "^4.3.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^1.1.1",
-    "@pankod/refine-antd": "^3.18.0",
-    "@pankod/refine-react-location": "^3.18.0",
-    "@pankod/refine-graphql": "^3.18.0",
     "graphql": "^15.5.3",
     "graphql-request": "^3.5.0",
-    "@pankod/refine-kbar": "^0.8.0",
     "i18next": "^20.1.0",
-    "react-i18next": "^11.8.11",
     "i18next-browser-languagedetector": "^6.1.1",
-    "i18next-xhr-backend": "^3.2.2"
+    "i18next-xhr-backend": "^3.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.8.11",
+    "react-scripts": "^5.0.0",
+    "web-vitals": "^1.1.1"
   },
   "devDependencies": {
+    "@types/node": "^12.20.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/node": "^12.20.10",
     "typescript": "^4.7.4"
   },
   "scripts": {
