--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
+    "dotenv": "^16.0.1",
     "graphql": "^15.5.3",
     "graphql-request": "^3.5.0",
     "i18next": "^20.1.0",
@@ -21,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.8.11",
+    "react-phone-input-2": "^2.15.1",
     "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.1"
   },
