--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
+    "cryptr": "^6.0.3",
     "dotenv": "^16.0.1",
-    "graphql": "^15.5.3",
-    "graphql-request": "^3.5.0",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.1",
     "i18next-xhr-backend": "^3.2.2",
+    "luxon": "^3.0.1",
+    "ms": "^2.1.3",
+    "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.8.11",
@@ -27,7 +33,12 @@
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
+    "@types/cryptr": "^4.0.1",
+    "@types/luxon": "^3.0.0",
+    "@types/ms": "^0.7.31",
     "@types/node": "^12.20.10",
+    "@types/pluralize": "^0.0.29",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "typescript": "^4.7.4"
