--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.1",
     "i18next-xhr-backend": "^3.2.2",
+    "lodash": "^4.17.21",
     "luxon": "^3.0.1",
     "ms": "^2.1.3",
     "pluralize": "^8.0.0",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/cryptr": "^4.0.1",
+    "@types/lodash": "^4.14.184",
     "@types/luxon": "^3.0.0",
     "@types/ms": "^0.7.31",
     "@types/node": "^12.20.10",
