--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@pankod/refine-graphql": "^3.18.0",
     "@pankod/refine-kbar": "^0.8.0",
     "@pankod/refine-react-location": "^3.18.0",
+    "@pankod/refine-react-router-v6": "^3.31.3",
     "@pankod/refine-strapi-graphql": "^4.3.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
