--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/pluralize": "^0.0.29",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "antd-colorpicker": "^1.0.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
