--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@pankod/refine-antd": "^3.18.0",
     "@pankod/refine-core": "^3.18.0",
     "@pankod/refine-graphql": "^3.18.0",
@@ -20,6 +21,7 @@
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
+    "graphql-ws": "^5.11.1",
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.1",
     "i18next-xhr-backend": "^3.2.2",
@@ -32,6 +34,7 @@
     "react-i18next": "^11.8.11",
     "react-phone-input-2": "^2.15.1",
     "react-scripts": "^5.0.0",
+    "react-yandex-maps": "^4.6.0",
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
