--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@pankod/refine-react-location": "^3.18.0",
     "@pankod/refine-react-router-v6": "^3.31.3",
     "@pankod/refine-strapi-graphql": "^4.3.0",
+    "@supercharge/strings": "^1.28.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -22,6 +23,7 @@
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "graphql-ws": "^5.11.1",
+    "hashids": "^2.2.10",
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.1",
     "i18next-xhr-backend": "^3.2.2",
@@ -35,6 +37,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-scripts": "^5.0.0",
     "react-yandex-maps": "^4.6.0",
+    "usehooks-ts": "^2.6.0",
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
