--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
+    "cryptlib": "^1.0.3",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "cryptr": "^6.0.3",
@@ -35,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.8.11",
     "react-phone-input-2": "^2.15.1",
+    "react-qrcode-logo": "^2.8.0",
     "react-scripts": "^5.0.0",
     "react-yandex-maps": "^4.6.0",
     "usehooks-ts": "^2.6.0",
