--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-i18next": "^11.8.11",
     "react-phone-input-2": "^2.15.1",
     "react-qrcode-logo": "^2.8.0",
