--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pankod/refine-react-router-v6": "^3.31.3",
     "@pankod/refine-strapi-graphql": "^4.3.0",
     "@supercharge/strings": "^1.28.0",
+    "@tanstack/react-query": "^4.20.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
