--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@pankod/refine-react-location": "^3.18.0",
     "@pankod/refine-react-router-v6": "^3.31.3",
     "@pankod/refine-strapi-graphql": "^4.3.0",
+    "@pbe/react-yandex-maps": "^1.2.2",
     "@supercharge/strings": "^1.28.0",
-    "@tanstack/react-query": "^4.20.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -42,6 +42,7 @@
     "react-qrcode-logo": "^2.8.0",
     "react-scripts": "^5.0.0",
     "react-yandex-maps": "^4.6.0",
+    "swr": "^2.0.0",
     "usehooks-ts": "^2.6.0",
     "web-vitals": "^1.1.1"
   },
