--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-qrcode-logo": "^2.8.0",
     "react-scripts": "^5.0.0",
+    "react-use": "^17.4.0",
     "react-yandex-maps": "^4.6.0",
     "swr": "^2.0.0",
     "usehooks-ts": "^2.6.0",
