--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
+    "antd-table-saveas-excel": "^2.2.1",
     "cryptlib": "^1.0.3",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
