--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@formkit/auto-animate": "^1.0.0-beta.5",
-    "@pankod/refine-antd": "^3.18.0",
-    "@pankod/refine-core": "^3.18.0",
+    "@pankod/refine-antd": "3.70.4",
+    "@pankod/refine-cli": "^1.17.0",
+    "@pankod/refine-core": "3.99.2",
     "@pankod/refine-graphql": "^3.18.0",
-    "@pankod/refine-kbar": "^0.8.0",
-    "@pankod/refine-react-location": "^3.18.0",
-    "@pankod/refine-react-router-v6": "^3.31.3",
-    "@pankod/refine-strapi-graphql": "^4.3.0",
+    "@pankod/refine-kbar": "0.10.2",
+    "@pankod/refine-react-location": "3.36.2",
+    "@pankod/refine-react-router-v6": "3.38.0",
+    "@pankod/refine-strapi-graphql": "4.9.0",
     "@pbe/react-yandex-maps": "^1.2.2",
     "@supercharge/strings": "^1.28.0",
     "@testing-library/jest-dom": "^5.12.0",
@@ -66,7 +67,8 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "refine": "refine"
   },
   "eslintConfig": {
     "extends": [
