--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@formkit/auto-animate": "^1.0.0-beta.5",
+    "@heroicons/react": "^2.0.15",
     "@pankod/refine-antd": "3.70.4",
     "@pankod/refine-cli": "^1.17.0",
     "@pankod/refine-core": "3.99.2",
@@ -18,6 +19,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@tremor/react": "^1.7.0",
     "@types/jest": "^26.0.23",
     "antd-table-saveas-excel": "^2.2.1",
     "cryptlib": "^1.0.3",
@@ -41,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-i18next": "^11.8.11",
+    "react-icons": "^4.7.1",
     "react-phone-input-2": "^2.15.1",
     "react-qrcode-logo": "^2.8.0",
     "react-scripts": "^5.0.0",
