--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@apollo/client": "^3.6.9",
     "@formkit/auto-animate": "^1.0.0-beta.5",
     "@heroicons/react": "^2.0.15",
-    "@pankod/refine-antd": "3.70.4",
+    "@pankod/refine-antd": "4.7.1",
     "@pankod/refine-cli": "^1.17.0",
-    "@pankod/refine-core": "3.99.2",
+    "@pankod/refine-core": "3.99.4",
     "@pankod/refine-graphql": "^3.18.0",
     "@pankod/refine-kbar": "0.10.2",
     "@pankod/refine-react-location": "3.36.2",
@@ -30,6 +30,7 @@
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "graphql-ws": "^5.11.1",
+    "dayjs": "^1.10.7",
     "hashids": "^2.2.10",
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.1",
