--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "cryptr": "^6.0.3",
+    "dayjs": "^1.10.7",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "graphql-ws": "^5.11.1",
-    "dayjs": "^1.10.7",
     "hashids": "^2.2.10",
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.1",
@@ -46,6 +46,7 @@
     "react-i18next": "^11.8.11",
     "react-icons": "^4.7.1",
     "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.2.18",
     "react-qrcode-logo": "^2.8.0",
     "react-scripts": "^5.0.0",
     "react-sticky-box": "^1.0.2",
