--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cryptr": "^6.0.3",
     "dayjs": "^1.10.7",
     "dotenv": "^16.0.1",
+    "firebase": "^9.17.2",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "graphql-ws": "^5.11.1",
