--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@faker-js/faker": "^7.6.0",
     "@formkit/auto-animate": "^1.0.0-beta.5",
     "@heroicons/react": "^2.0.15",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@pankod/refine-antd": "4.7.1",
     "@pankod/refine-cli": "^1.17.0",
     "@pankod/refine-core": "3.99.4",
@@ -16,6 +19,7 @@
     "@pankod/refine-strapi-graphql": "4.9.0",
     "@pbe/react-yandex-maps": "^1.2.2",
     "@supercharge/strings": "^1.28.0",
+    "@tanstack/react-table": "^8.7.9",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -51,6 +55,8 @@
     "react-qrcode-logo": "^2.8.0",
     "react-scripts": "^5.0.0",
     "react-sticky-box": "^1.0.2",
+    "react-table": "^7.8.0",
+    "react-to-pdf": "^0.0.14",
     "react-use": "^17.4.0",
     "react-yandex-maps": "^4.6.0",
     "swr": "^2.0.0",
@@ -67,6 +73,7 @@
     "@types/pluralize": "^0.0.29",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-table": "^7.7.14",
     "antd-colorpicker": "^1.0.0",
     "typescript": "^4.7.4"
   },
