--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.2.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-hook-form": "^7.40.0",
     "react-i18next": "^11.8.11",
     "react-icons": "^4.7.1",
@@ -75,6 +76,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-table": "^7.7.14",
     "antd-colorpicker": "^1.0.0",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.7.4"
   },
   "scripts": {
