--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "@heroicons/react": "^2.0.15",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@pankod/refine-antd": "4.7.1",
-    "@pankod/refine-cli": "^1.17.0",
-    "@pankod/refine-core": "3.99.4",
-    "@pankod/refine-graphql": "^3.18.0",
-    "@pankod/refine-kbar": "0.10.2",
     "@pankod/refine-react-location": "3.36.2",
-    "@pankod/refine-react-router-v6": "3.38.0",
-    "@pankod/refine-strapi-graphql": "4.9.0",
     "@pbe/react-yandex-maps": "^1.2.2",
+    "@refinedev/antd": "latest",
+    "@refinedev/cli": "latest",
+    "@refinedev/core": "latest",
+    "@refinedev/graphql": "latest",
+    "@refinedev/kbar": "latest",
+    "@refinedev/react-router-v6": "latest",
+    "@refinedev/strapi-graphql": "latest",
     "@supercharge/strings": "^1.28.0",
+    "@tanstack/react-query": "^4.10.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@tremor/react": "^1.7.0",
     "@types/jest": "^26.0.23",
+    "antd": "^5.0.5",
     "antd-table-saveas-excel": "^2.2.1",
     "cryptlib": "^1.0.3",
     "crypto": "^1.0.1",
@@ -47,7 +49,7 @@
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
-    "react-hook-form": "^7.40.0",
+    "react-hook-form": "^7.30.0",
     "react-i18next": "^11.8.11",
     "react-icons": "^4.7.1",
     "react-phone-input-2": "^2.15.1",
