--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.18",
     "react-qrcode-logo": "^2.8.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.0",
     "react-sticky-box": "^1.0.2",
     "react-table": "^7.8.0",
